Fixed sidebar and header alignment and spacing

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 html {
     font-size: 62.5%;
-    
 }
 
 body {
@@ -22,27 +21,28 @@ body {
     grid-template-areas: 
         "sidebar header"
         "sidebar main";
-    
 }
 
 /* Sidebar */
 
 .sidebar {
-    max-height: 100vh;
     grid-area: sidebar;
     display: grid;
-    grid-template-rows: repeat(12, minmax(0, 1fr));
+    grid-template-rows: repeat(20, minmax(0, 1fr));
+    grid-template-columns: minmax(0, 1fr);
     background-color: blue;
 }
 
 .nav-item {
     display: flex;
     align-items: center;
-    padding-left: 2.4rem;
+    padding-right: 8rem;
+    padding-left: 2rem;
+    gap: 1rem;
 }
 
 .icon {
-    margin-right: 1.2rem;
+
 }
 
 .logo-box {
@@ -64,7 +64,8 @@ body {
         "search account"
         "greet action"
     ;
-    padding: 0 10rem;
+    padding: 2.4rem 10rem;
+    gap: 1rem;
 }
 
 .search-box {
@@ -143,6 +144,7 @@ body {
     ;
     max-height: 100%;
     min-height: 0;
+    padding: 0 10rem;
 }
 
 .project-container {
